--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,10 +17,11 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
+//    "src/**/*.ts",
+//    "src/**/*.d.ts",
+//    "src/**/*.tsx",
+//    "src/**/*.vue",
+//    "src/App.vue"
   ],
   "references": [
     {
